<resources>
    <string name="app_name">Dice Game</string>
    <string name="total_score">Score: 0</string>
    <string name="roll_the_dice">Swipe up to roll</string>
    <string name="result_of_dice_roll">Score this roll: 0</string>
    <string name="_0">0</string>
    <string name="no_score_enhancer">No Score Enhancer</string>
    <string name="noScore">No Score Enhancer</string>
    <string name="doubleBonus">Double +50</string>
    <string name="tripleBonus">Triple +100</string>
    <string name="scoreThisRoll">Score this Roll: </string>
    <string name="create_new">createNew</string>
    <string name="file">Title</string>
    <string name="open">open</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="v_0_0_7">v 0.0.7</string>
    <string name="william_bratz">William Bratz</string>
    <string name="the_dice_game">The Dice Game</string>
</resources>