<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/aquaish"
    >

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/diceRollResult"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/result_of_dice_roll"
        android:textColor="@color/weird_brown"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreEnhancer"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/totalScoreText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_score"
        android:textColor="@color/weird_brown"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/rollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_the_dice"
        android:textColor="@color/weird_brown"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/totalScoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <TextView
        android:id="@+id/scoreEnhancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_score_enhancer"
        android:textColor="@color/weird_brown"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/rollDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <ImageView
        android:id="@+id/dice1image"
        android:layout_width="122dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/diceRollResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        app:srcCompat="@drawable/die_6" />

    <ImageView
        android:id="@+id/dice2image"
        android:layout_width="122dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/scoreEnhancer"
        app:layout_constraintEnd_toEndOf="@+id/dice3image"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        app:srcCompat="@drawable/die_6" />

    <ImageView
        android:id="@+id/dice3image"
        android:layout_width="122dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/diceRollResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        app:srcCompat="@drawable/die_6" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/dice2image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/name"
        android:text="Name: "
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/dice1image"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scoreboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalScoreText" />

</androidx.constraintlayout.widget.ConstraintLayout>